--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         	<span class="icon"><img width = "100px" src = "images/logo.png"></span>
 			&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         	<span class="icon"><img width = "100px" src = "images/anurag.png"></span>
-			<h1><a href="index.html">CVSR ACM Student Chapter</a></h1>
+			<h1><a href="index.html">AGI-CSE ACM Student Chapter</a></h1>
 		</div>
 		<div id="menu">
 			<ul id = "nav">
