Changed copyright year

--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@ The objectives of the organization are to foster an involvement in the awareness
 		<div class="fbox1">
 		<span class="icon icon-map-marker"></span>
 			<span>
+      Anurag Group of Institutions <br>
+      (Formerly CVSR College of Engineering)  <br>
 			Venkatapur, Ghatkesar Mandal,<br />
 			Medchal District, Hyderabad,<br />
 			Telangana, India. 500 088.
@@ -178,7 +180,7 @@ The objectives of the organization are to foster an involvement in the awareness
 	</div>
 </div>
 <div id="copyright">
-	<p>&copy; All Rights Reserved | CVSR AGI Student Chapter</p>
+	<p>&copy;2019 All Rights Reserved | AGI-CSE ACM Student Chapter</p>
 </div>
 <script type = "text/javascript" src = "jquery.js"></script>
 <script>
