Minorspelling and alignment issues

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ The objectives of the organization are to foster an involvement in the awareness
 			<div class="title">
 				<h2>And many more</h2>
 			</div>
-			<p>CVSR ACM Student Chapter has organized many such events for the benifit of the students.</p>
+			<p>CVSR ACM Student Chapter has organized many such events for the benefit of the students.</p>
 		</div>
 	</div>
 
@@ -112,7 +112,7 @@ The objectives of the organization are to foster an involvement in the awareness
 	<br />
 	<div class="title">
 		  <h2>Gallery</h2>
-		  <p>(Click on the image to enlarge.)</p>
+		  <p>(Click on the image to enlarge)</p>
 	</div>
 	<div id = "gal" class = "container">
 
@@ -128,7 +128,7 @@ The objectives of the organization are to foster an involvement in the awareness
 		<p><b>Sangam Sukesh</b> - Vice Chair</p>
 		<p><b>K Pragathi</b> - Treasurer</p>
 		<p><b>R Vaishnavi</b> - Secretary</p>
-		<p><b>Mr.G Vishnu Murthy</b> - Faculty Sponsor</p>
+		<p><b>Dr. G Vishnu Murthy</b> - Faculty Sponsor</p>
 	</div>
 	</div>
 	<div id = "contactus" class = "container">
@@ -164,13 +164,13 @@ The objectives of the organization are to foster an involvement in the awareness
       (Formerly CVSR College of Engineering)  <br>
 			Venkatapur, Ghatkesar Mandal,<br />
 			Medchal District, Hyderabad,<br />
-			Telangana, India. 500 088.
+			Telangana, India - 500 088.
 			</span>
 		</div>
 		<div class="fbox1">
 			<span class="icon icon-phone"></span>
 			<span>
-				Phone: +91-84999 53666 / 84999 63666
+				Ph: +91 84999 53666 <br>&nbsp&nbsp&nbsp&nbsp&nbsp +91 84999 63666
 			</span>
 		</div>
 		<div class="fbox1">
