--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>CVSR ACM Student Chapter - Official Website</title>
-<meta name="keywords" content="" />
+<title>ACM - Official website for AGI-CSE</title>
+<meta name="keywords" content="CVSR,ACM,AGI-CSE,AGI" />
 <meta name="description" content="" />
 <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
 <link href="default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+<link href="fonts.css" rel="stylesheet" type ="text/css" media="all" />
 
 <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
@@ -45,6 +45,7 @@
 				<li id="nav3"><a href="#" title="">Gallery</a></li>
 				<li id="nav4"><a href="#" title="">Team</a></li>
 				<li id="nav5"><a href="#" title="">Contact Us</a></li>
+        <li id="nav6"><a href="#" title="">Alumni</a></li>
 			</ul>
 		</div>
 	</div>
