Added Alumni page to website

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
         	<span class="icon"><img width = "100px" src = "images/anurag.png"></span>
 			<h1><a href="index.html">AGI-CSE ACM Student Chapter</a></h1>
+      <h4><a href="alumni.html">ALUMNI</a></h4>
 		</div>
 		<div id="menu">
 			<ul id = "nav">
@@ -45,7 +46,6 @@
 				<li id="nav3"><a href="#" title="">Gallery</a></li>
 				<li id="nav4"><a href="#" title="">Team</a></li>
 				<li id="nav5"><a href="#" title="">Contact Us</a></li>
-        <li id="alumni"><a href="/home/nuky/Desktop/ACM-Website/alumni.html" title="">Alumni</a></li>
 			</ul>
 		</div>
 	</div>
@@ -126,7 +126,7 @@ The objectives of the organization are to foster an involvement in the awareness
 	</div>
 	<div style = "text-align:center;">
 		<p><b>Karthik V Pemmaraju</b> - Chair Person</p>
-		<p><b>Sangam Sukesh</b> - Vice Chair Person</p>
+		<p><b>Sangam Sukesh</b> - Vice Chair</p>
 		<p><b>K Pragathi</b> - Treasurer</p>
 		<p><b>R Vaishnavi</b> - Secretary</p>
 		<p><b>Dr. G Vishnu Murthy</b> - Faculty Sponsor</p>
