--- a/alumni.html
+++ b/alumni.html
@@ -103,7 +103,7 @@ footer
     </div>
     <div class="column">
       <h2>Web Master</h2>
-      <p>V Abhinavv</p>
+      <p>V Abhinav</p>
       <span>
         <img src=>
       </span>
